dom exemples, with search-bar boilerplate

--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-    <h1>C'est le dom!</h1>    
+    <h1>C'est le dom!</h1>
+    <div id="container" data-number="3">
+        <p class="paragraph">Paragraphe</p>
+        <p class="paragraph">Paragraphe</p>
+        <p class="paragraph">Paragraphe</p>
+        <p class="paragraph">Paragraphe</p>
+        <p class="paragraph">Paragraphe</p>
+    </div>
 
+    <button id="changeColors">Change colors!</button>
+
+    <hr>
+
+    <div id="items"></div>
+
+    <div>
+        <input id="inputText" type="text" placeholder="Type some texts...">
+    </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
