little exemples and demistification

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <input id="inputText" type="text" placeholder="Type some texts...">
     </div>
 
+    <script src="jquery.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
