get/post of articles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     </div>
     <div class="createArticles">
         <div>
-            <input id="title" type="text" placeholder="title">
+            <label for="">Title</label>
+            <input value="toto" id="title" type="text" placeholder="">
+        </div>
+        <div>
+            <label for="">Author</label>
+            <input id="author" type="text" placeholder="">
         </div>
         <div>
             <textarea name="" id="content" cols="30" rows="10"></textarea>
